--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,3 +1,12 @@
 page-about {
-
+  ion-content{
+    align-content: center;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 40%;
+  }
+  ion-input{
+    font-size: 20px;
+    font-style: bold;
+  }
 }
